altered structure for banner image and site title text to get them to align and prevent breakages with screen sie changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@ body {
 }
 
 /* add styling to main site title header and nav */
-/* Add a black background color to the top navigation */
 .topnav {
   background-color: white;
   overflow: hidden;
@@ -28,7 +27,7 @@ body {
   text-align: center;
   padding: 15px;
   text-decoration: none;
-  font-size: 3vw;
+  font-size: 2vw;
 }
 
 /* Change the color of links on hover */
@@ -81,7 +80,7 @@ body {
 #hero-outer {
   height: 10rem;
   width: 100%;
-  padding-top: 5%;
+  padding-top: 0.5%;
   position: relative;
 }
 
@@ -94,12 +93,13 @@ body {
 
 #site-title {
   color: #0063dcff;
-  font-size: 4vw;
+  font-size: 3vw;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 4px;
-  bottom: 10px;
-  left: 10px;
+  bottom: 5%;
+  left: 25%;
+  right: 25%;
 
   position: absolute;
 }
